# tech_doc_mcp

./: .env.example  .gitignore  LICENSE  README.md  ROADMAP.md  config.yaml.example  crawl_fastmcp.py  pyproject.toml
crawlers/: nextjs.py  shadcn.py
docs/: DEVLOG.md  PHASE-1-SUMMARY.md  search-fusion-redesign.md
eval/: README.md  chunk_inspect.py  chunk_sweep.py  expand_gold.py  harness.py  judge.py  recall_gap.py  rerank_eval.py  results.md  testset.yaml
scripts/: batch_clean.py  crawl_fastapi.py  crawl_fastapi_filtered.py  crawl_sqlmodel_filtered.py  index_docs.py  test_cleaner.py  test_embedding.py
scripts/crawlers/: crawl_sqlmodel.py
skills/add-docs/: SKILL.md
src/tech_doc_mcp/: client.py  config.py  logging.py
src/tech_doc_mcp/cli/: main.py
src/tech_doc_mcp/crawler/: loader.py
src/tech_doc_mcp/mcp/: server.py
src/tech_doc_mcp/processor/: chunker.py  cleaner.py
src/tech_doc_mcp/search/: bm25.py  hybrid.py
src/tech_doc_mcp/store/: models.py  vector_store.py
